[gd_scene load_steps=3 format=3 uid="uid://boeyfaoa602ev"]

[ext_resource type="Script" path="res://scripts/menu/pause.gd" id="1_sycf6"]
[ext_resource type="PackedScene" uid="uid://b2v2dmnitkmfa" path="res://LogicNodes/menu_logic/options.tscn" id="2_uh11n"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sycf6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 70.0
offset_top = -380.0
offset_right = 373.0
offset_bottom = -84.0
grow_vertical = 0
size_flags_vertical = 8
theme_override_constants/separation = 10
alignment = 1

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
theme_override_font_sizes/font_size = 30
text = "Continue"

[node name="OptionButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../ContinueButton")
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="title" type="Label" parent="."]
layout_mode = 1
offset_right = 1240.0
offset_bottom = 137.0
theme_override_font_sizes/font_size = 100
text = "Boring shooter game?"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Options" parent="." instance=ExtResource("2_uh11n")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
offset_left = -1000.0
offset_top = -782.0
grow_horizontal = 0
grow_vertical = 0
script = null

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
